deploy/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dorf-app-backend
  namespace: dorf-app
  labels:
    app: dorf-app-backend
spec:
  selector:
    app: dorf-app-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
