deploy/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dorf-app-backend
  namespace: dorf-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.xn--rssing-wxa.de
      secretName: dorf-app-tls
  rules:
    - host: app.xn--rssing-wxa.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dorf-app-backend
                port:
                  number: 8080
